# SteVioCode

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  prelude.rs
src/commands/: mod.rs  project.rs
src/core/: mod.rs  project_detectors.rs  project_manager.rs  storage.rs  types.rs
