[package]
name = "stevio_code"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clap_complete = "4.5.52"
dirs = "6.0.0"
git2 = "0.20.2"
inquire = "0.7.5"
limbo = "0.0.20"
serde = { version = "1.0.219", features = ["serde_derive"] }
text_io = "0.1.13"
thiserror = "2.0.12"
toml = "0.8.22"
walkdir = "2"
